@@ -1,3 +1,7 @@
+2000-09-01  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Better sleeping.  Detects occupied beds too.
+
 2000-08-31  Tristan Tarrant  <nadir@users.sourceforge.net>
 
 	* files/databuf.h: Added write() method to DataSources
